[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-derive = { version = "1.0.5"}
native-windows-gui = { version = "1.0.12", features = ["clipboard"]}
rand = "0.8.5"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
